# socks5-c-client

./: CMakeLists.txt  README.md
include/xsocks/: socks5.h  tcp.h  tls.h
src/: main.c  socks5.c  tcp.c  tls.c
